--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Jogo de Damas</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Jogo de Damas</h1>
+  <div id="turn">Vez do jogador: 🔴 Vermelho</div>
   <div id="board"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
