--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Jogo de Damas</title>
+  <title>T-Rex Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Jogo de Damas</h1>
-  <div id="turn">Vez do jogador: 🔴 Vermelho</div>
-  <div id="board"></div>
-
+  <div id="game">
+    <div id="dino"></div>
+    <div id="obstacle"></div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
