--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!-- index.html -->
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>T-Rex Game</title>
+  <title>Jogo de Damas</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="game">
-    <div id="dino"></div>
-    <div id="obstacle"></div>
-  </div>
+  <h1>Jogo de Damas</h1>
+  <div id="turn">Vez do jogador: 🔴 Vermelho</div>
+  <div id="board"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
